styles added to css

--- a/index.html
+++ b/index.html
@@ -5,45 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zadanie domowe GOIT Polska</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h3><a href="WebStudio" class="link">WebStudio</a></h3>
+    <header class="header">
+        <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
             <nav>
                 <ul>
                     <li><a href="Agencja" class="link">Agencja</a></li>
-                    <li><a href="Portfolio" class="link">Portfolio</a></li>
+                    <li><a href="Portfolio.html" class="link">Portfolio</a></li>
                     <li><a href="Kontakt" class="link">Kontakt</a></li>
                 </ul>
             </nav>
     <div>    
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
     </div>
     </header>
     <main>
-    <section>    
-        <h1>EFEKTYWNE ROZWIĄZANIA<br>DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+    <section class="tittle">    
+        <h1 class="headline">EFEKTYWNE ROZWIĄZANIA<br>DLA WASZEGO BIZNESU</h1>
+        <button type="button" class="button">Zamów usługę</button>
     </section>    
     <section>
-        <table>
-            <tr>
-                <th>LOREM IPSUM</th>
-                 <th>LOREM IPSUM</th>
-                <th>LOREM IPSUM</th>
-                <th>LOREM IPSUM</th>
-            </tr>
-            <tr>
-                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</td>
-            </tr>
-        </table>
+        <ul>
+            <p class="text">lorem ipsum</p>
+            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum etmalesuada</li>
+        </ul>
+        <ul>
+            <p class="text">lorem ipsum</p>
+            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+                etmalesuada</li>
+        </ul>
+        <ul>
+            <p class="text">lorem ipsum</p>
+            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+                etmalesuada</li>
+        </ul>
+        <ul>
+            <p class="text">lorem ipsum</p>
+            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+                etmalesuada</li>
+        </ul>
     </section>    
     <section>    
-        <h2>Czym się zajmujemy</h2>
+        <h2 class="headline2">Czym się zajmujemy</h2>
             <ul>
                 <li>
                     <img src="images/close-up-image-programer-working-his-desk-office_1098-18707.jpg" 
@@ -62,15 +69,15 @@
                 </li>
             </ul>
     </section>        
-    <section>        
-        <h2>Nasz zespół</h2>
+    <section class="team">        
+        <h2 class="headline2">Nasz zespół</h2>
             <ul>
                 <li>
                     <figure>    
                         <img src="images/img(3).jpg" alt="img(3)" width="270" height="260"/>
-                        <figcaption>
+                        <figcaption class="description">
                             John Doe
-                            <p>Product Designer</p>
+                            <p class="job">Product Designer</p>
                         </figcaption>
                     </figure>        
                 </li>
@@ -79,9 +86,9 @@
                 <li>
                     <figure>
                         <img src="images/img(4).jpg" alt="img(4)" width="270" height="260"/>
-                        <figcaption>
+                        <figcaption class="description">
                             John Doe
-                            <p>Frontend Developer</p>
+                            <p class="job">Frontend Developer</p>
                         </figcaption>
                     </figure>
                 </li>    
@@ -90,9 +97,9 @@
                 <li>
                     <figure>
                         <img src="images/img(5).jpg" alt="img(5)" width="270" height="260"/>
-                        <figcaption>    
+                        <figcaption class="description">    
                             John Doe
-                            <p>Marketing</p>
+                            <p class="job">Marketing</p>
                         </figcaption>
                     </figure>   
                 </li>     
@@ -101,22 +108,22 @@
                 <li>
                     <figure>
                         <img src="images/img(6).jpg" alt="img(6)" width="270" height="260"/>
-                        <figcaption>
+                        <figcaption class="description">
                             John Doe
-                            <p>UI Designer</p>
+                            <p class="job">UI Designer</p>
                         </figcaption>
                     </figure>
                 </li>    
             </ul>
     </section>        
     </main>      
-    <footer>
-        <h3><a href="WebStudio" class="link">WebStudio</a></h3>
-        <address>
+    <footer class="footer">
+        <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
+        <address class="address">
             m.Warszawa, Aleje Jerozolimskie 21
         </address>
-        <div><a href="mailto:info@example.com">info@example.com</a></div>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <div class="contact-footer"><a class="contact" href="mailto:info@example.com">info@example.com</a></div>
+        <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
     </footer>
 </body>
 </html>
