--- a/index.html
+++ b/index.html
@@ -25,32 +25,27 @@
     </header>
     <main>
     <section class="tittle">    
-        <h1 class="headline">EFEKTYWNE ROZWIĄZANIA<br>DLA WASZEGO BIZNESU</h1>
+        <h1 class="headline">efektywne rozwiązania<br>dla waszego biznesu</h1>
         <button type="button" class="button">Zamów usługę</button>
     </section>    
     <section>
         <ul>
             <p class="text">lorem ipsum</p>
-            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum etmalesuada</li>
-        </ul>
-        <ul>
+            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+                et malesuada</li>
             <p class="text">lorem ipsum</p>
-            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-                etmalesuada</li>
-        </ul>
-        <ul>
+            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+                et malesuada</li>
             <p class="text">lorem ipsum</p>
-            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-                etmalesuada</li>
-        </ul>
-        <ul>
+            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+                et malesuada</li>
             <p class="text">lorem ipsum</p>
-            <li class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-                etmalesuada</li>
+            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+                et malesuada</li>
         </ul>
     </section>    
     <section>    
-        <h2 class="headline2">Czym się zajmujemy</h2>
+        <h2 class="headline2">czym się zajmujemy</h2>
             <ul>
                 <li>
                     <img src="images/close-up-image-programer-working-his-desk-office_1098-18707.jpg" 
@@ -70,7 +65,7 @@
             </ul>
     </section>        
     <section class="team">        
-        <h2 class="headline2">Nasz zespół</h2>
+        <h2 class="headline2">nasz zespół</h2>
             <ul>
                 <li>
                     <figure>    
@@ -81,19 +76,15 @@
                         </figcaption>
                     </figure>        
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <figure>
                         <img src="images/img(4).jpg" alt="img(4)" width="270" height="260"/>
                         <figcaption class="description">
                             John Doe
-                            <p class="job">Frontend Developer</p>
+                            <p class="job">Frontend Feveloper</p>
                         </figcaption>
                     </figure>
                 </li>    
-            </ul>
-            <ul>
                 <li>
                     <figure>
                         <img src="images/img(5).jpg" alt="img(5)" width="270" height="260"/>
@@ -103,8 +94,6 @@
                         </figcaption>
                     </figure>   
                 </li>     
-            </ul>
-            <ul>
                 <li>
                     <figure>
                         <img src="images/img(6).jpg" alt="img(6)" width="270" height="260"/>
