--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zadanie domowe GOIT Polska</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -46,8 +48,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="dizajn">
                     <figure>
                         <img src="images/project2.jpg" alt="project2" width="370" height="294" />
@@ -57,8 +57,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="aplikacja">
                     <figure>
                         <img src="images/project3.jpg" alt="project3" width="370" height="294" />
@@ -68,8 +66,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="marketing">
                     <figure>
                         <img src="images/project4.jpg" alt="project4" width="370" height="294" />
@@ -79,8 +75,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="aplikacja">
                     <figure>
                         <img src="images/project5.jpg" alt="project5" width="370" height="294" />
@@ -90,8 +84,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="strona-intenetowa">
                     <figure>
                         <img src="images/project6.jpg" alt="project6" width="370" height="294" />
@@ -101,8 +93,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="dizajn">
                     <figure>
                         <img src="images/project7.jpg" alt="project7" width="370" height="294" />
@@ -112,8 +102,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="marketing">
                     <figure>
                         <img src="images/project8.jpg" alt="project8" width="370" height="294" />
@@ -123,8 +111,6 @@
                         </figcaption>
                     </figure>
                 </li>
-            </ul>
-            <ul>
                 <li class="aplikacja">
                     <figure>
                         <img src="images/project9.jpg" alt="project9" width="370" height="294" />
