--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
+    <header class="menu">
         <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
             <nav>
-                <ul>
+                <ul class="links">
                     <li><a href="Agencja" class="link">Agencja</a></li>
                     <li><a href="Portfolio.html" class="link">Portfolio</a></li>
                     <li><a href="Kontakt" class="link">Kontakt</a></li>
@@ -26,27 +26,27 @@
     <main>
     <section class="tittle">    
         <h1 class="headline">efektywne rozwiązania<br>dla waszego biznesu</h1>
-        <button type="button" class="button">Zamów usługę</button>
+        <button type="button" class="click">Zamów usługę</button>
     </section>    
-    <section>
+    <section class="lorem-ipsum">
         <ul>
-            <p class="text">lorem ipsum</p>
-            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+            <p class="lorem">lorem ipsum</p>
+            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
                 et malesuada</li>
-            <p class="text">lorem ipsum</p>
-            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+            <p class="lorem">lorem ipsum</p>
+            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
                 et malesuada</li>
-            <p class="text">lorem ipsum</p>
-            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+            <p class="lorem">lorem ipsum</p>
+            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
                 et malesuada</li>
-            <p class="text">lorem ipsum</p>
-            <li class="content">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+            <p class="lorem">lorem ipsum</p>
+            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
                 et malesuada</li>
         </ul>
     </section>    
-    <section>    
+    <section class="work">    
         <h2 class="headline2">czym się zajmujemy</h2>
-            <ul>
+            <ul class="work-images">
                 <li>
                     <img src="images/close-up-image-programer-working-his-desk-office_1098-18707.jpg" 
                          alt="close up image programmer working his desk office"
@@ -66,7 +66,7 @@
     </section>        
     <section class="team">        
         <h2 class="headline2">nasz zespół</h2>
-            <ul>
+            <ul class="team-photos">
                 <li>
                     <figure>    
                         <img src="images/img(3).jpg" alt="img(3)" width="270" height="260"/>
@@ -106,9 +106,9 @@
             </ul>
     </section>        
     </main>      
-    <footer class="footer">
+    <footer class="get-in-touch">
         <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
-        <address class="address">
+        <address class="location">
             m.Warszawa, Aleje Jerozolimskie 21
         </address>
         <div class="contact-footer"><a class="contact" href="mailto:info@example.com">info@example.com</a></div>
