--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="menu">
         <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
         <nav>
-            <ul>
+            <ul class="links">
                 <li><a href="Agencja" class="link">Agencja</a></li>
                 <li><a href="Portfolio.html" class="link">Portfolio</a></li>
                 <li><a href="Kontakt" class="link">Kontakt</a></li>
@@ -28,104 +28,104 @@
         </div>
     </header>
     <main>
-        <section class="filters">
-            <ul>
-                <li><button type="button" class="button">Wszystkie</button></li>
-                <li><button type="button" class="button">Strony</button></li>
-                <li><button type="button" class="button">Aplikacje</button></li>
-                <li><button type="button" class="button">Dizajn</button></li>
-                <li><button type="button" class="button">Marketing</button></li>
+        <section class="filter">
+            <ul class="filters">
+                <li><button type="button" class="click">Wszystkie</button></li>
+                <li><button type="button" class="click">Strony</button></li>
+                <li><button type="button" class="click">Aplikacje</button></li>
+                <li><button type="button" class="click">Dizajn</button></li>
+                <li><button type="button" class="click">Marketing</button></li>
             </ul>
         </section>
-        <section class="project">
-            <ul>
+        <section class="portfolio">
+            <ul class="projects">
                 <li class="strona-internetowa">
                     <figure>
                         <img src="images/project1.jpg" alt="project1" width="370" height="294" />
-                        <figcaption class="name">
+                        <figcaption class="project-name">
                             technocrack
-                            <p class="type">strona intenetowa</p>
+                            <p class="project-type">strona intenetowa</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="dizajn">
                     <figure>
                         <img src="images/project2.jpg" alt="project2" width="370" height="294" />
-                        <figcaption class="name">
-                            grafika new orlean vs golden star
-                            <p class="type">dizajn</p>
+                        <figcaption class="project-name">
+                            grafika New Orlean vs Golden Star
+                            <p class="project-type">dizajn</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="aplikacja">
                     <figure>
                         <img src="images/project3.jpg" alt="project3" width="370" height="294" />
-                        <figcaption class="name">
-                            restauracja seafood
-                            <p class="type">aplikacja</p>
+                        <figcaption class="project-name">
+                            restauracja Seafood
+                            <p class="project-type">aplikacja</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="marketing">
                     <figure>
                         <img src="images/project4.jpg" alt="project4" width="370" height="294" />
-                        <figcaption class="name">
-                            projekt prime
-                            <p class="type">marketing</p>
+                        <figcaption class="project-name">
+                            projekt Prime
+                            <p class="project-type">marketing</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="aplikacja">
                     <figure>
                         <img src="images/project5.jpg" alt="project5" width="370" height="294" />
-                        <figcaption class="name">
-                            projekt boxes
-                            <p class="type">aplikacja</p>
+                        <figcaption class="project-name">
+                            projekt Boxes
+                            <p class="project-type">aplikacja</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="strona-intenetowa">
                     <figure>
                         <img src="images/project6.jpg" alt="project6" width="370" height="294" />
-                        <figcaption class="name">
-                            inspiration has no borders
-                            <p class="type">strona internetowa</p>
+                        <figcaption class="project-name">
+                            inspiration has no Borders
+                            <p class="project-type">strona internetowa</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="dizajn">
                     <figure>
                         <img src="images/project7.jpg" alt="project7" width="370" height="294" />
-                        <figcaption class="name">
-                            magazyn limited edition
-                            <p class="type">dizajn</p>
+                        <figcaption class="project-name">
+                            magazyn Limited Edition
+                            <p class="project-type">dizajn</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="marketing">
                     <figure>
                         <img src="images/project8.jpg" alt="project8" width="370" height="294" />
-                        <figcaption class="name">
-                            projekt lab
-                            <p class="type">marketing</p>
+                        <figcaption class="project-name">
+                            projekt LAB
+                            <p class="project-type">marketing</p>
                         </figcaption>
                     </figure>
                 </li>
                 <li class="aplikacja">
                     <figure>
                         <img src="images/project9.jpg" alt="project9" width="370" height="294" />
-                        <figcaption class="name">
-                            growing business
-                            <p class="type">aplikacja</p>
+                        <figcaption class="project-name">
+                            growing Business
+                            <p class="project-type">aplikacja</p>
                         </figcaption>
                     </figure>
                 </li>
             </ul>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="get-in-touch">
         <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
-        <address class="address">
+        <address class="location">
             m.Warszawa, Aleje Jerozolimskie 21
         </address>
         <div class="contact-footer"><a class="contact" href="mailto:info@example.com">info@example.com</a></div>
