html checked with validator

--- a/index.html
+++ b/index.html
@@ -29,19 +29,27 @@
         <button type="button" class="click">Zamów usługę</button>
     </section>    
     <section class="lorem-ipsum">
-        <ul>
-            <p class="lorem">lorem ipsum</p>
-            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
-                et malesuada</li>
-            <p class="lorem">lorem ipsum</p>
-            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
-                et malesuada</li>
-            <p class="lorem">lorem ipsum</p>
-            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
-                et malesuada</li>
-            <p class="lorem">lorem ipsum</p>
-            <li class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-                et malesuada</li>
+        <ul class="lorem-list">
+            <li>
+                <h3 class="lorem">lorem ipsum</h3>
+                <p class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+                et malesuada</p>
+            </li>
+            <li>
+                <h3 class="lorem">lorem ipsum</h3>
+                <p class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+                et malesuada</p>
+            </li>
+            <li>    
+                <h3 class="lorem">lorem ipsum</h3>
+                <p class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum 
+                et malesuada</p>
+            </li>
+            <li>
+                <h3 class="lorem">lorem ipsum</h3>
+                <p class="lorem-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+                et malesuada</p>
+            </li>    
         </ul>
     </section>    
     <section class="work">    
