link to portfolio updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul class="links">
                     <li><a href="Agencja" class="link">Agencja</a></li>
-                    <li><a href="Portfolio.html" class="link">Portfolio</a></li>
+                    <li><a href="portfolio.html" class="link">Portfolio</a></li>
                     <li><a href="Kontakt" class="link">Kontakt</a></li>
                 </ul>
             </nav>
