revised as per comments

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header class="menu">
-        <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
+        <a href="index.html" class="link"><span class="web">Web</span><span class="studio">Studio</span></a>
             <nav>
                 <ul class="links">
-                    <li><a href="Agencja" class="link">Agencja</a></li>
+                    <li><a href="index.html" class="link">Agencja</a></li>
                     <li><a href="portfolio.html" class="link">Portfolio</a></li>
-                    <li><a href="Kontakt" class="link">Kontakt</a></li>
+                    <li><a href="index.html" class="link">Kontakt</a></li>
                 </ul>
             </nav>
     <div>    
@@ -26,7 +26,7 @@
     <main>
     <section class="tittle">    
         <h1 class="headline">efektywne rozwiązania<br>dla waszego biznesu</h1>
-        <button type="button" class="click">Zamów usługę</button>
+        <button type="button" class="button1">Zamów usługę</button>
     </section>    
     <section class="lorem-ipsum">
         <ul class="lorem-list">
@@ -79,7 +79,7 @@
                     <figure>    
                         <img src="images/img(3).jpg" alt="img(3)" width="270" height="260"/>
                         <figcaption class="description">
-                            John Doe
+                            <h4 class="name">John Doe</h4>
                             <p class="job">Product Designer</p>
                         </figcaption>
                     </figure>        
@@ -88,7 +88,7 @@
                     <figure>
                         <img src="images/img(4).jpg" alt="img(4)" width="270" height="260"/>
                         <figcaption class="description">
-                            John Doe
+                            <h4 class="name">John Doe</h4>
                             <p class="job">Frontend Feveloper</p>
                         </figcaption>
                     </figure>
@@ -97,7 +97,7 @@
                     <figure>
                         <img src="images/img(5).jpg" alt="img(5)" width="270" height="260"/>
                         <figcaption class="description">    
-                            John Doe
+                            <h4 class="name">John Doe</h4>
                             <p class="job">Marketing</p>
                         </figcaption>
                     </figure>   
@@ -106,7 +106,7 @@
                     <figure>
                         <img src="images/img(6).jpg" alt="img(6)" width="270" height="260"/>
                         <figcaption class="description">
-                            John Doe
+                            <h4 class="name">John Doe</h4>
                             <p class="job">UI Designer</p>
                         </figcaption>
                     </figure>
@@ -115,7 +115,7 @@
     </section>        
     </main>      
     <footer class="get-in-touch">
-        <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
+        <a href="index.html" class="link"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address class="location">
             m.Warszawa, Aleje Jerozolimskie 21
         </address>
