--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,12 @@
 
 <body>
     <header class="menu">
-        <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
+        <a href="index.html" class="link"><span class="web">Web</span><span class="studio">Studio</span></a>
         <nav>
             <ul class="links">
-                <li><a href="Agencja" class="link">Agencja</a></li>
+                <li><a href="index.html" class="link">Agencja</a></li>
                 <li><a href="portfolio.html" class="link">Portfolio</a></li>
-                <li><a href="Kontakt" class="link">Kontakt</a></li>
+                <li><a href="index.html" class="link">Kontakt</a></li>
             </ul>
         </nav>
         <div>
@@ -124,7 +124,7 @@
         </section>
     </main>
     <footer class="get-in-touch">
-        <h3 class="studio"><a href="index.html" class="link">WebStudio</a></h3>
+        <a href="index.html" class="link"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address class="location">
             m.Warszawa, Aleje Jerozolimskie 21
         </address>
