--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
                     <figure>
                         <img src="images/project1.jpg" alt="project1" width="370" height="294" />
                         <figcaption class="project-name">
-                            technocrack
+                            <span>technocrack</span>
                             <p class="project-type">strona intenetowa</p>
                         </figcaption>
                     </figure>
@@ -52,7 +52,7 @@
                     <figure>
                         <img src="images/project2.jpg" alt="project2" width="370" height="294" />
                         <figcaption class="project-name">
-                            grafika New Orlean vs Golden Star
+                            <span>grafika New Orlean vs Golden Star</span>
                             <p class="project-type">dizajn</p>
                         </figcaption>
                     </figure>
@@ -61,7 +61,7 @@
                     <figure>
                         <img src="images/project3.jpg" alt="project3" width="370" height="294" />
                         <figcaption class="project-name">
-                            restauracja Seafood
+                            <span>restauracja Seafood</span>
                             <p class="project-type">aplikacja</p>
                         </figcaption>
                     </figure>
@@ -70,7 +70,7 @@
                     <figure>
                         <img src="images/project4.jpg" alt="project4" width="370" height="294" />
                         <figcaption class="project-name">
-                            projekt Prime
+                            <span>projekt Prime</span>
                             <p class="project-type">marketing</p>
                         </figcaption>
                     </figure>
@@ -79,7 +79,7 @@
                     <figure>
                         <img src="images/project5.jpg" alt="project5" width="370" height="294" />
                         <figcaption class="project-name">
-                            projekt Boxes
+                            <span>projekt Boxes</span>
                             <p class="project-type">aplikacja</p>
                         </figcaption>
                     </figure>
@@ -88,7 +88,7 @@
                     <figure>
                         <img src="images/project6.jpg" alt="project6" width="370" height="294" />
                         <figcaption class="project-name">
-                            inspiration has no Borders
+                            <span>inspiration has no Borders</span>
                             <p class="project-type">strona internetowa</p>
                         </figcaption>
                     </figure>
@@ -97,7 +97,7 @@
                     <figure>
                         <img src="images/project7.jpg" alt="project7" width="370" height="294" />
                         <figcaption class="project-name">
-                            magazyn Limited Edition
+                            <span>magazyn Limited Edition</span>
                             <p class="project-type">dizajn</p>
                         </figcaption>
                     </figure>
@@ -106,7 +106,7 @@
                     <figure>
                         <img src="images/project8.jpg" alt="project8" width="370" height="294" />
                         <figcaption class="project-name">
-                            projekt LAB
+                            <span>projekt LAB</span>
                             <p class="project-type">marketing</p>
                         </figcaption>
                     </figure>
@@ -115,7 +115,7 @@
                     <figure>
                         <img src="images/project9.jpg" alt="project9" width="370" height="294" />
                         <figcaption class="project-name">
-                            growing Business
+                            <span>growing Business</span>
                             <p class="project-type">aplikacja</p>
                         </figcaption>
                     </figure>
